# SigmaPlusPlus

./: CMakeLists.txt  README.md
examples/: 1.l1  access-nbody.l1  dce.l1  primes.l1  sort.l1
src/: ast.cpp  ast.h  bytecode.cpp  bytecode.h  gc.cpp  gc.h  jit.cpp  jit.h  lexer.cpp  lexer.h  main.cpp  parser.cpp  parser.h  runtime.cpp  runtime.h  vm.cpp  vm.h
